# narajangteo_mcp_server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  file_extractor.py  main.py  pyproject.toml  requirements.txt  server.py  smithery.yaml
.well-known/mcp/: server-card.json
src/nara_server/: __init__.py  file_extractor.py  server.py
