[project]
name = "nara-mcp-server"
version = "1.1.0"
description = "MCP server for searching Korean government procurement bids (나라장터 입찰공고)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Datajang", email = "wkdtmddlf789@gmail.com"}
]
keywords = ["mcp", "government", "procurement", "bid", "g2b", "나라장터", "입찰공고"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "olefile>=0.47",
    "langchain>=0.1.0,<1.0.0",
    "langchain-core>=0.1.0,<1.0.0",
    "langchain-teddynote>=0.3.9",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "openpyxl>=3.1"
]

[project.urls]
Homepage = "https://github.com/Datajang/narajangteo_mcp_server/issues"
Repository = "https://github.com/Datajang/narajangteo_mcp_server"
Issues = "https://github.com/Datajang/narajangteo_mcp_server/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
nara-mcp-server = "server:main"
